kubernetes/apps/networking/envoy-gateway/gateway/internal/gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  annotations:
    external-dns.alpha.kubernetes.io/target: &hostname internal.chestr.dev
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 401"
spec:
  gatewayClassName: envoy
  infrastructure:
    annotations:
      external-dns.alpha.kubernetes.io/hostname: *hostname
      lbipam.cilium.io/ips: 10.0.20.100
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: internal-proxy-config
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.chestr.dev"
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.chestr.dev"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: chestr-dev-tls
